# grimoire

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  flake.nix  release-please-config.json
.claude/: settings.json
.claude/commands/: audit.md  check.md  feature.md  fix.md  implement.md  refactor.md  security-review.md  spec.md  sync-docs.md  test.md  upgrade-sdk.md
.claude/hooks/: post-edit-check.sh  security-stop-check.sh  validate-commit-msg.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
crates/grimoire-cli/src/: main.rs
crates/grimoire-cli/src/commands/: mod.rs
crates/grimoire-common/src/: config.rs  socket.rs
crates/grimoire-prompt/src/: main.rs
crates/grimoire-prompt/src/backend/: macos.rs  zenity.rs
crates/grimoire-protocol/: Cargo.toml
crates/grimoire-protocol/src/: codec.rs  request.rs  response.rs
crates/grimoire-sdk/src/: auth.rs  lib.rs  persist.rs  ssh.rs  sync.rs  vault.rs
crates/grimoire-service/src/: approval.rs  main.rs  peer.rs  prompt.rs  server.rs  session.rs  ssh_agent.rs  state.rs
docs/: development.md  future-features.md  install.md  quickstart.md  security-report.md  security.md  ssh-agent.md
docs/tutorials/: 01-getting-started.md  02-ssh-agent.md  03-secret-injection.md  04-headless.md
